--- a/grlo/index.html
+++ b/grlo/index.html
@@ -137,7 +137,7 @@
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required>
             <br>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Gönder">
         </form>
     </footer>
     <script src="scripts/script.js"></script>
