little changes on information text and design

--- a/pusulamiz-edebiyat/index.html
+++ b/pusulamiz-edebiyat/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="bilgilendirme">
-        BİLGİLENDİRME! Şu anda henüz hazırlık aşamasında olan Desktop modunu görüntülemeye çalışıyorsunuz. Sitenin çalışabilmesi için siteyi -ekranı maximum 768 pixel'lik olan- bir telefonda açmanız ya da telefon ekranınızı dikey konuma getirmeniz gerekmektedir.
+        BİLGİLENDİRME! Şu anda henüz hazırlık aşamasında olan Masaüstü modunu görüntülemeye çalışıyorsunuz. Sitenin çalışabilmesi için bilgisayarda iseniz tarayıcınızın boyutunu en fazla 768 pixel olacak şekilde küçültmeniz, bir telefondan giriş yapmanız ya da telefon ekranınızı dikey konuma getirmeniz gerekmektedir.
     </div>
     <header>
         <nav id="desktopNav"></nav>
