fixing the problem about displaying details elements

--- a/pusulamiz-edebiyat/index.html
+++ b/pusulamiz-edebiyat/index.html
@@ -46,7 +46,14 @@
     </header>
     <section id="home">
         <h1>~ İZMİR ~</h1>
-        <div id="ilceler"></div>
+        <div id="ilceler">
+            <div class="accordion">
+                <div class="summary">Deneme</div>
+                <div class="content">
+                    Content to be hidden :O
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <nav id="desktopFt"></nav>
