Updating - Could not solve the problem about accordions and using default details elements

--- a/pusulamiz-edebiyat/index.html
+++ b/pusulamiz-edebiyat/index.html
@@ -30,7 +30,7 @@
                     <h1>Pusulamız Edebiyat</h1>
                     <br>
                     <li><a href="#home">Ana Sayfa</a></li>
-                    <li><a href="https://aydoganyagcibsm.meb.k12.tr" target="_blank">Hakkımızda</a></li>
+                    <li><a href="#">Hakkımızda</a></li>
                     <li><a href="#">İletişim</a></li>
                     <br>
                     <li id="liTheme">
@@ -46,7 +46,8 @@
     </header>
     <section id="home">
         <h1>~ İZMİR ~</h1>
-        <div id="ilceler"></div>
+        <div id="ilceler">
+        </div>
     </section>
     <footer>
         <nav id="desktopFt"></nav>
