--- a/orff-schulwerk/index.html
+++ b/orff-schulwerk/index.html
@@ -36,9 +36,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Partners</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="partners/germany/">Germany</a>
+                        <a href="partners/greece/">Greece</a>
+                        <a href="partners/turkey/">Turkey</a>
                     </div>
                 </div>
             </div>
@@ -61,9 +61,9 @@
             </div>
             <div>
                 <h1>Partners</h1>
-                <li><a href="">Germany</a></li>
-                <li><a href="">Greece</a></li>
-                <li><a href="">Turkey</a></li>
+                <li><a href="partners/germany/">Germany</a></li>
+                <li><a href="partners/greece/">Greece</a></li>
+                <li><a href="partners/turkey/">Turkey</a></li>
             </div>
         </div>
     </section>
