--- a/orff-schulwerk/our-project/what-is-orff/index.html
+++ b/orff-schulwerk/our-project/what-is-orff/index.html
@@ -36,9 +36,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Partners</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="../../partners/germany/">Germany</a>
+                        <a href="../../partners/greece/">Greece</a>
+                        <a href="../../partners/turkey/">Turkey</a>
                     </div>
                 </div>
             </div>
