Update - Styling and other changes

--- a/orff-schulwerk/partners/greece/index.html
+++ b/orff-schulwerk/partners/greece/index.html
@@ -28,9 +28,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Activities</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="">Berlin</a>
+                        <a href="">Kavala</a>
+                        <a href="">Izmir</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -48,7 +48,7 @@
         <div id="greece" class="parallax-title">
             <div>
                 <h1>Special Education High School of Kavala</h1>
-                <p>Kavala, Greece</p>
+                <p>Kavala, Greece <img src="../../imgs/flag-greece.jpg" alt="Greece Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
             </div>
         </div>
@@ -60,7 +60,12 @@
         </div>
     </section>
     <footer>
-        Hamza Kağan Özer
+        <div style="text-align: center;">Erasmus+<br>Orff-Schulwerk for Inclusion<br></div>
+        <div>
+            <img src="../../imgs/flag-germany.jpg" alt="">
+            <img src="../../imgs/flag-greece.jpg" alt="">
+            <img src="../../imgs/flag-turkey.jpg" alt="">
+        </div>
     </footer>
 </body>
 </html>
