--- a/orff-schulwerk/partners/turkey/index.html
+++ b/orff-schulwerk/partners/turkey/index.html
@@ -28,9 +28,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Activities</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="">Berlin</a>
+                        <a href="">Kavala</a>
+                        <a href="">Izmir</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -47,8 +47,8 @@
     <section>
         <div id="aosb" class="parallax-title">
             <div>
-                <h1>Cigli AOSB Special Education School</h1>
-                <p>Izmir, Turkey</p>
+                <h1>Cigli Atatürk Organized Industrial Zone<br>Special Education School</h1>
+                <p>Izmir, Turkey <img src="../../imgs/flag-turkey.jpg" alt="Turkey Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
             </div>
         </div>
@@ -60,8 +60,8 @@
         </div>
         <div id="bilsem" class="parallax-title">
             <div>
-                <h1>Karsiyaka Aydogan Yagci Science and Art Center</h1>
-                <p>Izmir, Turkey</p>
+                <h1>Karsiyaka Aydogan Yagci<br>Science and Art Center</h1>
+                <p>Izmir, Turkey <img src="../../imgs/flag-turkey.jpg" alt="Turkey Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
             </div>
         </div>
@@ -71,7 +71,12 @@
         </div>
     </section>
     <footer>
-        Hamza Kağan Özer
+        <div style="text-align: center;">Erasmus+<br>Orff-Schulwerk for Inclusion<br></div>
+        <div>
+            <img src="../../imgs/flag-germany.jpg" alt="">
+            <img src="../../imgs/flag-greece.jpg" alt="">
+            <img src="../../imgs/flag-turkey.jpg" alt="">
+        </div>
     </footer>
 </body>
 </html>
