--- a/orff-schulwerk/index.html
+++ b/orff-schulwerk/index.html
@@ -28,9 +28,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Activities</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="">Berlin</a>
+                        <a href="">Kavala</a>
+                        <a href="">Izmir</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -55,20 +55,25 @@
             </div>
             <div>
                 <h1>Activites</h1>
-                <li><a href="">Germany</a></li>
-                <li><a href="">Greece</a></li>
-                <li><a href="">Turkey</a></li>
+                <li><a href="">Berlin</a></li>
+                <li><a href="">Kavala</a></li>
+                <li><a href="">Izmir</a></li>
             </div>
             <div>
                 <h1>Partners</h1>
-                <li><a href="partners/germany/">Germany</a></li>
-                <li><a href="partners/greece/">Greece</a></li>
-                <li><a href="partners/turkey/">Turkey</a></li>
+                <li><a href="partners/germany/">Germany</a><img src="imgs/flag-germany.jpg" alt="German Flag" id="icon_ge"></li>
+                <li><a href="partners/greece/">Greece</a><img src="imgs/flag-greece.jpg" alt="Greece Flag" id="icon_gr"></li>
+                <li><a href="partners/turkey/">Turkey</a><img src="imgs/flag-turkey.jpg" alt="Turkey Flag" id="icon_tr"></li>
             </div>
         </div>
     </section>
     <footer>
-        Hamza Kağan Özer
+        <div style="text-align: center;">Erasmus+<br>Orff-Schulwerk for Inclusion<br></div>
+        <div>
+            <img src="imgs/flag-germany.jpg" alt="">
+            <img src="imgs/flag-greece.jpg" alt="">
+            <img src="imgs/flag-turkey.jpg" alt="">
+        </div>
     </footer>
 </body>
 </html>
