--- a/orff-schulwerk/our-project/about/index.html
+++ b/orff-schulwerk/our-project/about/index.html
@@ -28,9 +28,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Activities</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="">Berlin</a>
+                        <a href="">Kavala</a>
+                        <a href="">Izmir</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -99,7 +99,12 @@
         </div>
     </section>
     <footer>
-        Hamza Kağan Özer
+        <div style="text-align: center;">Erasmus+<br>Orff-Schulwerk for Inclusion<br></div>
+        <div>
+            <img src="../../imgs/flag-germany.jpg" alt="">
+            <img src="../../imgs/flag-greece.jpg" alt="">
+            <img src="../../imgs/flag-turkey.jpg" alt="">
+        </div>
     </footer>
 </body>
 </html>
