--- a/orff-schulwerk/partners/germany/index.html
+++ b/orff-schulwerk/partners/germany/index.html
@@ -28,9 +28,9 @@
                 <div class="dropdown">
                     <div class="dropbtn">Activities</div>
                     <div class="dropdown-content">
-                        <a href="">Germany</a>
-                        <a href="">Greece</a>
-                        <a href="">Turkey</a>
+                        <a href="">Berlin</a>
+                        <a href="">Kavala</a>
+                        <a href="">Izmir</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -45,10 +45,10 @@
         </nav>
     </header>
     <section>
-        <div id="germany" class="parallax-title">
+        <div id="germany" class="parallax-title" style="background-image: url('../../imgs/alfred-nobel-schule.jpg')">
             <div>
                 <h1>Alfred Nobel School</h1>
-                <p>Berlin, Germany</p>
+                <p>Berlin, Germany <img src="../../imgs/flag-germany.jpg" alt="Germany Flag"></p>
                 <p style="font-size: 1.5rem;">The Coordinator</p>
             </div>
         </div>
@@ -60,7 +60,12 @@
         </div>
     </section>
     <footer>
-        Hamza Kağan Özer
+        <div style="text-align: center;">Erasmus+<br>Orff-Schulwerk for Inclusion<br></div>
+        <div>
+            <img src="../../imgs/flag-germany.jpg" alt="">
+            <img src="../../imgs/flag-greece.jpg" alt="">
+            <img src="../../imgs/flag-turkey.jpg" alt="">
+        </div>
     </footer>
 </body>
 </html>
