--- a/orff-schulwerk/partners/greece/index.html
+++ b/orff-schulwerk/partners/greece/index.html
@@ -56,7 +56,7 @@
                 <div class="dropD" id="kagan">Hamza Kağan Özer</div>
             </div>
         </nav>
-        <nav id="navbar">
+        <nav id="navbar" class="desktop">
             <div id="logos">
                 <a href="../../"><img src="../../imgs/erasmus-logo.jpg" alt="Erasmus Logo"></a>
                 <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>    
