Update - Stying for mobile view

--- a/orff-schulwerk/index.html
+++ b/orff-schulwerk/index.html
@@ -24,7 +24,7 @@
                 <a href="./"><img src="imgs/orff-logo.jpg" alt="Orff Logo"></a>
             </div>
             <div id="linksMob">
-                <h1>Orff-Schulwerk<br> for Inclusion</h1>
+                <h1><a href="./">Orff-Schulwerk<br> for Inclusion</a></h1>
                 <details class="dropD">
                     <summary>Our Project</summary>
                     <div class="dropC">
@@ -51,9 +51,9 @@
                 <div class="dropD">
                     <a href="social-media/">Social Media</a>
                 </div>
-                <div class="dropD">
+                <!-- <div class="dropD">
                     <a href="gallery/">Gallery</a>
-                </div>
+                </div> -->
                 <div class="dropD" id="kagan">Hamza Kağan Özer</div>
             </div>
         </nav>
@@ -101,7 +101,7 @@
     </header>
     <section>
         <div class="parallax-title" id="background"><h1>Orff-Schulwerk <br class="mobile">for Inclusion</h1></div>
-        <img src="imgs/orff.jpg" id="orff" alt="Orff-Schulwerk for Inclusion">
+        <img src="imgs/orff.jpg" id="orff" class="desktop" alt="Orff-Schulwerk for Inclusion">
         <div id="project">
             <div>
                 <h1>Our Project</h1>
@@ -116,16 +116,16 @@
             </div>
             <div>
                 <h1>Partners</h1>
-                <li><a href="partners/germany/">Germany</a><img src="imgs/flag-germany.jpg" alt="German Flag" id="icon_ge"></li>
-                <li><a href="partners/greece/">Greece</a><img src="imgs/flag-greece.jpg" alt="Greece Flag" id="icon_gr"></li>
-                <li><a href="partners/turkey/">Turkey</a><img src="imgs/flag-turkey.jpg" alt="Turkey Flag" id="icon_tr"></li>
+                <li><a href="partners/germany/">Germany</a><img class="desktop" src="imgs/flag-germany.jpg" alt="German Flag" id="icon_ge"></li>
+                <li><a href="partners/greece/">Greece</a><img class="desktop" src="imgs/flag-greece.jpg" alt="Greece Flag" id="icon_gr"></li>
+                <li><a href="partners/turkey/">Turkey</a><img class="desktop" src="imgs/flag-turkey.jpg" alt="Turkey Flag" id="icon_tr"></li>
             </div>
-            <div>
+            <!-- <div>
                 <h1>Social Media</h1>
-                <li><a href="https://www.instagram.com/orffschulwerkforinclusion">Instagram</a><i class="fa fa-instagram"></i></li>
-                <li><a href="https://www.twitter.com/OrfForInclusion">Twitter</a><i class="fa fa-twitter"></i></li>
-                <li><a href="https://www.facebook.com/Orff-Schulwerk-for-Inclusion-102847979066993">Facebook</a><i class="fa fa-facebook"></i></li>
-            </div>
+                <li><a href="https://www.instagram.com/orffschulwerkforinclusion">Instagram</a><i class="fa fa-instagram desktop"></i></li>
+                <li><a href="https://www.twitter.com/OrfForInclusion">Twitter</a><i class="fa fa-twitter desktop"></i></li>
+                <li><a href="https://www.facebook.com/Orff-Schulwerk-for-Inclusion-102847979066993">Facebook</a><i class="fa fa-facebook desktop"></i></li>
+            </div> -->
         </div>
     </section>
     <footer>
