--- a/orff-schulwerk/partners/turkey/index.html
+++ b/orff-schulwerk/partners/turkey/index.html
@@ -23,7 +23,7 @@
                 <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>
             </div>
             <div id="linksMob">
-                <h1>Orff-Schulwerk<br> for Inclusion</h1>
+                <h1><a href="../../">Orff-Schulwerk<br> for Inclusion</a></h1>
                 <details class="dropD">
                     <summary>Our Project</summary>
                     <div class="dropC">
@@ -50,9 +50,9 @@
                 <div class="dropD">
                     <a href="../../social-media/">Social Media</a>
                 </div>
-                <div class="dropD">
+                <!-- <div class="dropD">
                     <a href="../../gallery/">Gallery</a>
-                </div>
+                </div> -->
                 <div class="dropD" id="kagan">Hamza Kağan Özer</div>
             </div>
         </nav>
@@ -101,7 +101,8 @@
     <section>
         <div id="aosb" class="parallax-title">
             <div>
-                <h1>Cigli Atatürk Organized Industrial Zone<br>Special Education School</h1>
+                <h1 class="desktop">Cigli Atatürk Organized Industrial Zone<br>Special Education School</h1>
+                <h1 class="mobile">Cigli AOSB<br>Special Education<br>School</h1>
                 <p>Izmir, Turkey <img src="../../imgs/flag-turkey.jpg" alt="Turkey Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
             </div>
@@ -114,7 +115,8 @@
         </div>
         <div id="bilsem" class="parallax-title">
             <div>
-                <h1>Karsiyaka Aydogan Yagci<br>Science and Art Center</h1>
+                <h1 class="desktop">Karsiyaka Aydogan Yagci<br>Science and Art Center</h1>
+                <h1 class="mobile">Karsiyaka<br>Aydogan Yagci<br>Science and Art Center</h1>
                 <p>Izmir, Turkey <img src="../../imgs/flag-turkey.jpg" alt="Turkey Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
             </div>
