--- a/orff-schulwerk/social-media/index.html
+++ b/orff-schulwerk/social-media/index.html
@@ -23,7 +23,7 @@
                 <a href="../"><img src="../imgs/orff-logo.jpg" alt="Orff Logo"></a>
             </div>
             <div id="linksMob">
-                <h1>Orff-Schulwerk<br> for Inclusion</h1>
+                <h1><a href="../">Orff-Schulwerk<br> for Inclusion</a></h1>
                 <details class="dropD">
                     <summary>Our Project</summary>
                     <div class="dropC">
@@ -50,9 +50,9 @@
                 <div class="dropD">
                     <a href="../social-media/">Social Media</a>
                 </div>
-                <div class="dropD">
+                <!-- <div class="dropD">
                     <a href="../gallery/">Gallery</a>
-                </div>
+                </div> -->
                 <div class="dropD" id="kagan">Hamza Kağan Özer</div>
             </div>
         </nav>
@@ -100,9 +100,10 @@
     </header>
     <section>
         <div class="parallax-title" id="follow">
-            <h1>Follow us on Social Media!</h1>
+            <h1 class="desktop">Follow us on Social Media!</h1>
+            <h1 class="mobile">Follow us<br>on Social Media!</h1>
         </div>
-        <div id="accounts" class="parallax-content">
+        <div id="accounts" class="parallax-content desktop">
             <div class="info">Our social media accounts: Instagram, Twitter and Facebook.</div>
             <div class="accounts">
                 <a href="https://www.facebook.com/Orff-Schulwerk-for-Inclusion-102847979066993" class="account facebook">
