--- a/orff-schulwerk/our-project/about/index.html
+++ b/orff-schulwerk/our-project/about/index.html
@@ -23,7 +23,7 @@
                 <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>
             </div>
             <div id="linksMob">
-                <h1>Orff-Schulwerk<br> for Inclusion</h1>
+                <h1><a href="../../">Orff-Schulwerk<br> for Inclusion</a></h1>
                 <details class="dropD">
                     <summary>Our Project</summary>
                     <div class="dropC">
@@ -50,9 +50,9 @@
                 <div class="dropD">
                     <a href="../../social-media/">Social Media</a>
                 </div>
-                <div class="dropD">
+                <!-- <div class="dropD">
                     <a href="../../gallery/">Gallery</a>
-                </div>
+                </div> -->
                 <div class="dropD" id="kagan">Hamza Kağan Özer</div>
             </div>
         </nav>
