Update - Added Berlin mobility

--- a/orff-schulwerk/mobilities/berlin/index.html
+++ b/orff-schulwerk/mobilities/berlin/index.html
@@ -102,6 +102,26 @@
         <div class="parallax-title" id="berlin">
             <h1>Berlin</h1>
         </div>
+        <div class="parallax-content">
+            Our first mobility  was held in Berlin, Germany between 23 March-26 March 2022, under the title of "What is Orff-Schulwerk?"
+            <br><br>
+            Hosted by the project coordinator Alfred-Nobel Schule, 2 participants from each school, as project partners Greece Eidiko Epaggelmatiko Gymnasio Kavalas and Karsiyaka Aydogan Yagci Science and Art Center, Cigli AOSB Special Education School. In addition to the presentations about the institutions of the coordinator and partner institutions, the project and their work to date, "What is Orff-Schulwerk?" seminar, review of project duties and responsibilities and activities, and planning of Orff-Schulwerk activities to be held in Greece and Turkey meetings were the main activities of the mobility.
+        </div>
+        <div class="parallax-content gallery-cnt">
+            <div class="gallery">
+                <div class="gallery-imgs">
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+    
+                    <div class="first slide"><img src="../../imgs/berlin1.jpg" alt="Our Berlin meeting"></div>
+                    <div class="slide"><img src="../../imgs/berlin2.jpg" alt="Our Berlin meeting"></div>
+                </div>
+                <div class="gallery-nav">
+                    <label for="radio1"></label>
+                    <label for="radio2"></label>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div style="text-align: center;">Erasmus+<br>Orff-Schulwerk for Inclusion<br></div>
