Update - Mostly done

--- a/orff-schulwerk/partners/greece/index.html
+++ b/orff-schulwerk/partners/greece/index.html
@@ -101,7 +101,7 @@
     <section>
         <div id="greece" class="parallax-title">
             <div>
-                <h1>Special Education High School of Kavala</h1>
+                <h1>Special <br class="mobile">Education High <br class="mobile">School of Kavala</h1>
                 <p>Kavala, Greece <img src="../../imgs/flag-greece.jpg" alt="Greece Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
             </div>
