--- a/orff-schulwerk/partners/turkey/index.html
+++ b/orff-schulwerk/partners/turkey/index.html
@@ -101,7 +101,7 @@
     <section>
         <div id="aosb" class="parallax-title">
             <div>
-                <h1 class="desktop">Cigli Atatürk Organized Industrial Zone<br>Special Education School</h1>
+                <h1 class="desktop">Cigli Atatürk Organized<br>Industrial Zone<br>Special Education School</h1>
                 <h1 class="mobile">Cigli AOSB<br>Special Education<br>School</h1>
                 <p>Izmir, Turkey <img src="../../imgs/flag-turkey.jpg" alt="Turkey Flag"></p>
                 <p style="font-size: 1.5rem;">The Partner School</p>
