--- a/orff-schulwerk/social-media/index.html
+++ b/orff-schulwerk/social-media/index.html
@@ -103,7 +103,7 @@
             <h1 class="desktop">Follow us on Social Media!</h1>
             <h1 class="mobile">Follow us<br>on Social Media!</h1>
         </div>
-        <div id="accounts" class="parallax-content desktop">
+        <div id="accounts" class="parallax-content">
             <div class="info">Our social media accounts: Instagram, Twitter and Facebook.</div>
             <div class="accounts">
                 <a href="https://www.facebook.com/Orff-Schulwerk-for-Inclusion-102847979066993" class="account facebook">
@@ -111,21 +111,21 @@
                         <i class="fa fa-facebook"></i>
                         <span>Orff-Schulwerk for Inclusion</span>
                     </div>
-                    <div class="img"></div>
+                    <div class="img desktop"></div>
                 </a>
                 <a href="https://www.twitter.com/OrfForInclusion" class="account twitter">
                     <div class="title">
                         <i class="fa fa-twitter"></i>
                         <span>@OrfForInclusion</span>
                     </div>
-                    <div class="img"></div>
+                    <div class="img desktop"></div>
                 </a>
                 <a href="https://www.instagram.com/orffschulwerkforinclusion" class="account instagram">
                     <div class="title">
                         <i class="fa fa-instagram"></i>
                         <span>@orffschulwerkforinclusion</span>
                     </div>
-                    <div class="img"></div>
+                    <div class="img desktop"></div>
                 </a>
             </div>
         </div>
