--- a/orff-schulwerk/index.html
+++ b/orff-schulwerk/index.html
@@ -101,7 +101,7 @@
     </header>
     <section>
         <div class="parallax-title" id="background"><h1>Orff-Schulwerk <br class="mobile">for Inclusion</h1></div>
-        <img src="imgs/orff.jpg" id="orff" class="desktop" alt="Orff-Schulwerk for Inclusion">
+        <img src="imgs/orff.jpg" id="orff" alt="Orff-Schulwerk for Inclusion">
         <div id="project">
             <div>
                 <h1>Our Project</h1>
