--- a/orff-schulwerk/mobilities/berlin/index.html
+++ b/orff-schulwerk/mobilities/berlin/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../styles/mobile.css" media="only screen and (max-width: 768px)">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
-    <title>About Our Project</title>
+    <title>Berlin</title>
 </head>
 <body>
     <header>
