--- a/orff-schulwerk/index.html
+++ b/orff-schulwerk/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="imgs/orff.jpg">
     <link rel="icon" href="imgs/orff-logo.jpg">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 768px)">
