Added header.js for multiple using of header

--- a/orff-schulwerk/partners/germany/index.html
+++ b/orff-schulwerk/partners/germany/index.html
@@ -9,95 +9,12 @@
     <link rel="stylesheet" href="../../styles/mobile.css" media="screen and (max-width: 768px)">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="/orff-schulwerk/header.js"></script>
     <title>Germany</title>
 </head>
 <body>
-    <header>
-        <nav class="mobile">
-            <input type="checkbox" id="hamBtn">
-            <label for="hamBtn">
-                <div></div><div></div><div></div>
-            </label>
-            <div id="logosMob">
-                <a href="../../"><img src="../../imgs/erasmus-logo.jpg" alt="Erasmus Logo"></a>
-                <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>
-            </div>
-            <div id="linksMob">
-                <h1><a href="../../">Orff-Schulwerk<br> for Inclusion</a></h1>
-                <details class="dropD">
-                    <summary>Our Project</summary>
-                    <div class="dropC">
-                        <a href="../../our-project/about">About Our Project</a>
-                        <a href="../../our-project/what-is-orff">What is Orff-Schulwerk Musical Approach</a>
-                    </div>
-                </details>
-                <details class="dropD">
-                    <summary>Mobilities</summary>
-                    <div class="dropC">
-                        <a href="../../mobilities/berlin/">Berlin</a>
-                        <a href="../../mobilities/kavala/">Kavala</a>
-                        <a href="../../mobilities/izmir/">Izmir</a>
-                    </div>
-                </details>
-                <details class="dropD">
-                    <summary>Partners</summary>
-                    <div class="dropC">
-                        <a href="../../partners/germany/">Germany</a>
-                        <a href="../../partners/greece/">Greece</a>
-                        <a href="../../partners/turkey/">Turkey</a>
-                    </div>
-                </details>
-                <div class="dropD">
-                    <a href="../../social-media/">Social Media</a>
-                </div>
-                <!-- <div class="dropD">
-                    <a href="../../gallery/">Gallery</a>
-                </div> -->
-                <div class="dropD" id="kagan">Hamza Kağan Özer</div>
-            </div>
-        </nav>
-        <nav id="navbar" class="desktop">
-            <div id="logos">
-                <a href="../../"><img src="../../imgs/erasmus-logo.jpg" alt="Erasmus Logo"></a>
-                <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>    
-            </div>
-            <div id="links">
-                <div class="dropdown">
-                    <div class="dropbtn">Our Project</div>
-                    <div class="dropdown-content">
-                        <a href="../../our-project/about/">About Our Project</a>
-                        <a href="../../our-project/what-is-orff/">What is Orff-Schulwerk Musical Approach</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">Mobilities</div>
-                    <div class="dropdown-content">
-                        <a href="../../mobilities/berlin/">Berlin</a>
-                        <a href="../../mobilities/kavala/">Kavala</a>
-                        <a href="../../mobilities/izmir/">Izmir</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">Partners</div>
-                    <div class="dropdown-content">
-                        <a href="../germany/">Germany</a>
-                        <a href="../greece/">Greece</a>
-                        <a href="../turkey/">Turkey</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">
-                        <a href="../../social-media/">Social Media</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">
-                        <a href="../../gallery/">Gallery</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div id="header-placeholder"></div>
     <section>
         <div id="germany" class="parallax-title" style="background-image: url('../../imgs/alfred-nobel-schule.jpg')">
             <div>
