--- a/orff-schulwerk/mobilities/berlin/index.html
+++ b/orff-schulwerk/mobilities/berlin/index.html
@@ -9,95 +9,12 @@
     <link rel="stylesheet" href="../../styles/mobile.css" media="only screen and (max-width: 768px)">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="/orff-schulwerk/header.js"></script>
     <title>Berlin</title>
 </head>
 <body>
-    <header>
-        <nav class="mobile">
-            <input type="checkbox" id="hamBtn">
-            <label for="hamBtn">
-                <div></div><div></div><div></div>
-            </label>
-            <div id="logosMob">
-                <a href="../../"><img src="../../imgs/erasmus-logo.jpg" alt="Erasmus Logo"></a>
-                <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>
-            </div>
-            <div id="linksMob">
-                <h1><a href="../../">Orff-Schulwerk<br> for Inclusion</a></h1>
-                <details class="dropD">
-                    <summary>Our Project</summary>
-                    <div class="dropC">
-                        <a href="../../our-project/about">About Our Project</a>
-                        <a href="../../our-project/what-is-orff">What is Orff-Schulwerk Musical Approach</a>
-                    </div>
-                </details>
-                <details class="dropD">
-                    <summary>Mobilities</summary>
-                    <div class="dropC">
-                        <a href="../../mobilities/berlin/">Berlin</a>
-                        <a href="../../mobilities/kavala/">Kavala</a>
-                        <a href="../../mobilities/izmir/">Izmir</a>
-                    </div>
-                </details>
-                <details class="dropD">
-                    <summary>Partners</summary>
-                    <div class="dropC">
-                        <a href="../../partners/germany/">Germany</a>
-                        <a href="../../partners/greece/">Greece</a>
-                        <a href="../../partners/turkey/">Turkey</a>
-                    </div>
-                </details>
-                <div class="dropD">
-                    <a href="../../social-media/">Social Media</a>
-                </div>
-                <!-- <div class="dropD">
-                    <a href="../../gallery/">Gallery</a>
-                </div> -->
-                <div class="dropD" id="kagan">Hamza Kağan Özer</div>
-            </div>
-        </nav>
-        <nav id="navbar" class="desktop">
-            <div id="logos">
-                <a href="../../"><img src="../../imgs/erasmus-logo.jpg" alt="Erasmus Logo"></a>
-                <a href="../../"><img src="../../imgs/orff-logo.jpg" alt="Orff Logo"></a>    
-            </div>
-            <div id="links">
-                <div class="dropdown">
-                    <div class="dropbtn">Our Project</div>
-                    <div class="dropdown-content">
-                        <a href="../../our-project/about/">About Our Project</a>
-                        <a href="../../our-project/what-is-orff/">What is Orff-Schulwerk Musical Approach</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">Mobilities</div>
-                    <div class="dropdown-content">
-                        <a href="../../mobilities/berlin/">Berlin</a>
-                        <a href="../../mobilities/kavala/">Kavala</a>
-                        <a href="../../mobilities/izmir/">Izmir</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">Partners</div>
-                    <div class="dropdown-content">
-                        <a href="../../partners/germany/">Germany</a>
-                        <a href="../../partners/greece/">Greece</a>
-                        <a href="../../partners/turkey/">Turkey</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">
-                        <a href="../../social-media/">Social Media</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <div class="dropbtn">
-                        <a href="../../gallery/">Gallery</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div id="header-placeholder"></div>
     <section>
         <div class="parallax-title" id="berlin">
             <h1>Berlin</h1>
@@ -107,19 +24,10 @@
             <br><br>
             Hosted by the project coordinator Alfred-Nobel Schule, 2 participants from each school, as project partners Greece Eidiko Epaggelmatiko Gymnasio Kavalas and Karsiyaka Aydogan Yagci Science and Art Center, Cigli AOSB Special Education School. In addition to the presentations about the institutions of the coordinator and partner institutions, the project and their work to date, "What is Orff-Schulwerk?" seminar, review of project duties and responsibilities and activities, and planning of Orff-Schulwerk activities to be held in Greece and Turkey meetings were the main activities of the mobility.
         </div>
-        <div class="parallax-content gallery-cnt">
+        <div class="parallax-content">
             <div class="gallery">
-                <div class="gallery-imgs">
-                    <input type="radio" name="radio-btn" id="radio1">
-                    <input type="radio" name="radio-btn" id="radio2">
-    
-                    <div class="first slide"><img src="../../imgs/berlin1.jpg" alt="Our Berlin meeting"></div>
-                    <div class="slide"><img src="../../imgs/berlin2.jpg" alt="Our Berlin meeting"></div>
-                </div>
-                <div class="gallery-nav">
-                    <label for="radio1"></label>
-                    <label for="radio2"></label>
-                </div>
+                <img src="/orff-schulwerk/imgs/berlin1.jpg" alt="">
+                <img src="/orff-schulwerk/imgs/berlin2.jpg" alt="">
             </div>
         </div>
     </section>
