Update for root page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Kağan Özer</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7b173948ba.js" crossorigin="anonymous"></script></head>
 <body>
-    <h1>This website does not exist!</h1>
-    My Projects:
-    <br>
-    <li><a href="pusulamiz-edebiyat/">Pusulamız Edebiyat</a></li>
-    <li><a href="orff-schulwerk/">Orff Schulwerk for Inclusion</a></li>
-    <li><a href="grlo">GRLO</a></li>
+    <div id="main">
+        <div id="photo" class="light-d light-m ">
+            <a href="https://github.com/kaganozer/" class="img-card">
+                <div class="img">
+                    <img src="https://avatars.githubusercontent.com/u/72611359?v=4" alt="">
+                </div>
+                <div class="img-info">
+                    <span><i class="fa-brands fa-github"></i></span>
+                    <span>kaganozer</span>
+                </div>
+            </a>
+            <div id="accounts">
+                <a href="https://instagram.com/lf_kagan">
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                    <span>@lf_kagan</span>
+                </a>
+                <a href="https://codepen.io/kaganozer">
+                    <span><i class="fa-brands fa-codepen"></i></span>
+                    <span>@kaganozer</span>
+                </a>
+                <a href="https://www.youtube.com/channel/UCYC8waxMkIb99_FJISAAq4A">
+                    <span><i class="fa-brands fa-youtube"></i></span>
+                    <span>Kağan Özer</span>
+                </a>
+            </div>
+        </div>
+        <div id="name" class="dark-d dark-m">
+            <div>
+                <h1>
+                    <span>H</span><span>a</span><span>m</span><span>z</span><span>a</span>
+                </h1>
+                <h1>
+                    <span>K</span><span>a</span><span>ğ</span><span>a</span><span>n</span>
+                </h1>
+                <h1>
+                    <span>Ö</span><span>z</span><span>e</span><span>r</span>
+                </h1>
+            </div>
+        </div>
+        <div id="info" class="dark-d light-m">
+            <div>
+                <li>
+                    <span><i class="fa-solid fa-flag"></i></span>
+                    <span>Turkey</span>
+                </li>
+                <li>
+                    <span><i class="fa-solid fa-person"></i></span>
+                    <span>17 y.o.</span>
+                </li>
+                <li>
+                    <span><i class="fa-solid fa-school"></i></span>
+                    <span>Çiğli Fen Lisesi</span>
+                </li>
+                <li>
+                    <span><i class="fa-solid fa-laptop-code"></i></span>
+                    <span>Python, HTML, CSS, JS, C</span>
+                </li>
+            </div>
+        </div>
+        <div id="github" class="light-d dark-m">
+            <div>
+                <h3>
+                    <span>Github Pages</span>
+                    <i class="fa-brands fa-github-square"></i>
+                </h3>
+                <li><a href="/orff-schulwerk">Orff-Schulwerk for Incluison</a></li>
+                <li><a href="/pusulamiz-edebiyat">Pusulamız Edebiyat</a></li>
+                <li><a href="/grlo">GRLO</a></li>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
